<resources>
    <string name="app_name">MagicMirror</string>

    <string name="hello_world">Press Button to Connect</string>
    <string name="hello_swipe">Or Swipe to change Preferences...</string>
    <string name="IP_textview">Sever IP:</string>
    <string name="ssid_textview">SSID:</string>
    <string name="password_textview">Password:</string>
    <string name="connect_button">Sync Content (Bonded)</string>
    <string name="setting_button">Mirror Setting</string>
    <string name="sleep_button">Toggle Sleep (Bonded)</string>
    <string name="wake_button">Wake Up Mirror</string>
    <string name="font">Font Settings</string>
    <string name="font_format">Font Format</string>
    <string name="font_size">Font Size</string>
    <string name="action_settings">Settings</string>
    <string name="Twitter">Twitter</string>
    <string name="TwitterAccount">Twitter Account</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="ConsumerKey">ConsumerKey</string>
    <string name="ConsumerSecret">ConsumerSecret</string>
    <string name="AccessToken">AccessToken</string>
    <string name="AccessTokenSecret">AccessTokenSecret</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open" />
    <string name="drawer_close" />
    <string name="discover">Discover</string>
    <string name="InsecureSync">Sync Content</string>
    <string name="SleepInsecure">Toggle Sleep</string>
    <string name="showSecureToggle">Show Secure</string>
    <string-array name="settings">
        <item>Twitter</item>
        <item>Quote</item>
        <item>Weather</item>
        <item>Calendar</item>
    </string-array>

</resources>