<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/connect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_button"
            android:onClick="syncContent"
            android:layout_below="@+id/insecureWifi"
            android:layout_alignRight="@+id/sleepButton"
            android:layout_alignEnd="@+id/sleepButton"
            android:visibility="invisible" />

        <Button
            android:id="@+id/sleepButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_button"
            android:layout_alignTop="@+id/sleepInsecure"
            android:layout_alignRight="@+id/raspberryName"
            android:layout_alignEnd="@+id/raspberryName"
            android:visibility="invisible" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ssid_textview"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginTop="67dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_textview"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="36dp" />

        <EditText
            android:id="@+id/ssidText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:layout_alignRight="@+id/passWordText"
            android:layout_alignEnd="@+id/passWordText" />

        <EditText
            android:id="@+id/passWordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView4"
            android:layout_toRightOf="@+id/textView4"
            android:layout_toEndOf="@+id/textView4" />

        <Button
            android:id="@+id/settingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TwitterAccount"
            android:id="@+id/TwitterAccountButton_main"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/bluetoothInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bluetooth info"
            android:layout_below="@+id/sleepButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/raspberryName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discover"
            android:id="@+id/discoverDevices"
            android:onClick="startLooking"
            android:layout_above="@+id/textView"
            android:layout_alignLeft="@+id/WiFibutton"
            android:layout_alignStart="@+id/WiFibutton"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Raspberry Name:"
            android:id="@+id/textView"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send Wifi"
            android:id="@+id/WiFibutton"
            android:layout_above="@+id/connect_button"
            android:layout_alignRight="@+id/raspberryName"
            android:layout_alignEnd="@+id/raspberryName"
            android:visibility="invisible" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InsecureSync"
            android:id="@+id/insecureSyncButton"
            android:onClick="syncInsecure"
            android:layout_above="@+id/sleepInsecure"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SleepInsecure"
            android:id="@+id/sleepInsecure"
            android:onClick="sleepInsecure"
            android:layout_marginBottom="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Insecure Send Wifi"
            android:id="@+id/insecureWifi"
            android:layout_above="@+id/insecureSyncButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="sendNetworkDataInsecure"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showSecureToggle"
            android:id="@+id/showSecureSwitch"
            android:onClick="toggleShowSecure"
            android:layout_above="@+id/raspberryName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false" />
    </RelativeLayout>

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffffff"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"></ListView>


</android.support.v4.widget.DrawerLayout>
